2008-12-22  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.6 TAGGED FOR RELEASE ***

	* tests/embed.test:	Eliminate duplicate test names.

	* changes:	Updates for 8.5.6 release.

2008-12-22  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkWidget.c: Don't crash when 
	application uses nondefault visual [Bug 2264732]
	(Backport from trunk change 2008-11-11)
	* Workaround for [Bug 2207435]
	(Backport from trunk change 2008-10-31).

2008-12-22  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkCanvPs.c (Tk_PostscriptFont,TkCanvPostscriptCmd): Backport
	of font size and reflection fix. [Bug 2107938]

2008-12-22  Alexandre Ferrieux 	<ferrieux@users.sourceforge.net>

	* generic/tkCanvUtil.c: Backport of the Millipeter patch [1813597,
	* generic/tkInt.h:       2218964]
	* generic/tkObj.c:
	* generic/tkText.c:
	
2008-12-21  Don Porter  <dgp@users.sourceforge.net>

	* generic/tk.h:		Bump to 8.5.6 for release.
	* library/tk.tcl:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:
	* README:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* changes:	Updates for 8.5.6 release.

2008-11-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/ttk/combobox.tcl: [Bug 1939129,1991930] combobox dropdown
	                            was drawn behind topmost toplevels.

2008-11-19  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkImage.c    Relax the constraint that every Tk_ImageType
	* generic/tkImgPhoto.c can only be passed to this function once.
	                       This allows tkImg to be loaded in multiple
	                       interpreters in a thread-enabled build of Tk.
	                       [Bug 2312027]

2008-11-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tk.h:        The tip 125 implementation permits the
	* generic/tkFrame.c:   wm manage command to manage any widget but
	* macosx/tkMacOSXWm.c: only those with Frame instance data should
	* unix/tkUnixWm.c:     be permitted. We now check for the suitability