@@ -1,3 +1,8 @@
+2009-01-07  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* win/tkWinWm.c: Backported fix for [Bug 1847002] to prevent the
+	bypassing of grab restrictions via the taskbar on Windows.
+
 2008-12-22  Don Porter  <dgp@users.sourceforge.net>
 
 	*** 8.5.6 TAGGED FOR RELEASE ***
